--- a/.github/workflows/cicd-test.yml
+++ b/.github/workflows/cicd-test.yml
@@ -21,6 +21,7 @@ jobs:
         mkdir -p ~/.docker/cli-plugins/
         curl -L "https://github.com/docker/buildx/releases/download/v0.10.3/buildx-v0.10.3.linux-amd64" -o ~/.docker/cli-plugins/docker-buildx
         chmod a+x ~/.docker/cli-plugins/docker-buildx
+        docker buildx install
         docker buildx create --use
   
     - name: Build Docker Images
